Create kubernetes file, create script build image docker